# actions-validate-devschema

./: README.md  action.yml  pyproject.toml  requirements.txt
.devcontainer/scripts/: postCreate.sh
.github/actions/validate/: action.yml  main.py  utils.py  validate_schema.py
.github/workflows/: ci.yml  publish-github-action.yml  validate-schema-test.yml
src/validate_devschema/: README.md  main.py  utils.py  validate_schema.py
tests/: test_main.py  test_utils.py  test_validate_schema.py
